# tickets_IEEE

./: .dockerignore  .env.example  .gitignore  .htaccess  ARCHIVOS_A_COPIAR.txt  ARQUITECTURA_SISTEMA.md  BIRTHDAY_SETUP.md  BIRTHDAY_SYSTEM.md  CLAUDE.md  COMO_CAMBIAR_A_MODO_DAILY.md  COMO_INICIAR_WHATSAPP.md  CONFIGURAR_TAREA_AUTOMATICA.md  DEPLOYMENT.md  Dockerfile  FTP_DEPLOY_GUIDE.md  GITHUB_AUTO_DEPLOY_SETUP.md  GITHUB_DEPLOY_COMMANDS.md  GUIA_DESARROLLO_MODULOS.md  GUIA_MIGRACION.md  IEEE_Tadeo_Control_System_Presentacion.html  INICIO_RAPIDO.md  INSTRUCCIONES_UI_VALIDACION.md  MANUAL_DEPLOYMENT_STEPS.md  QUICK_START.md  QUICK_START_WHATSAPP.md  README.md  README_CUMPLEANOS.md  README_QUICK.md  RESUMEN_MIGRACION.md  SERVER_DEPLOYMENT_CHECKLIST.md  SERVER_SETUP_GUIDE.md  SMTP_CONFIG.md  START_HERE.md  TAGS_SYSTEM_README.md  UPLOAD_INSTRUCTIONS.md  VALIDACIONES_MULTIPLES_README.md  WHATSAPP_API_SETUP.md  WHATSAPP_OPTIMIZATION.md  WHATSAPP_WEBHOOK_CONFIG.md  add_nick_field.py  (+96 more)
.claude/: settings.local.json
templates/: access_management.html  allied_companies.html  base.html  brochure.html  campaign_details.html  campaigns.html  catalogs.html  contests.html  dashboard.html  data_deletion.html  edit_event.html  espacio2026.html  events.html  home.html  login.html  messages.html  meta_demo.html  meta_tickets_demo.html  organizations.html  portal_dashboard.html  portal_login.html  portal_reset_password.html  privacy.html  projects.html  public_ticket.html  tags.html  terms.html  ticket_pin.html  tickets.html  universities.html  users.html  validate.html  (+2 more)
(+7 files in other folders)
