[project]
name = "ieee-tadeo-control"
version = "0.1.0"
description = "IEEE Tadeo Control System - Sistema de control y gestión de eventos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "qrcode>=8.0",
    "pillow>=11.0.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.0",
    "cryptography>=44.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "resend>=2.16.0",
]
